--- a/Ethiopia/onClickEthiopia.html
+++ b/Ethiopia/onClickEthiopia.html
@@ -384,13 +384,13 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		})
 
 
-	var regionMap = map.append('g').selectAll('.region')// the map with only region boundaries
+	var regionMap = map.append('g').selectAll('.regions')// the map with only region boundaries
 		.data(regionFeatures)
 		.enter()
 		.append('path')
 		.attr({
 			d: pathRegion,
-			class: 'region'
+			class: 'regions'
 		})
 		.style('fill', function(d, i){
 			return color(d.properties.price)
@@ -642,7 +642,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		townLines.enter().append('path');
 		townLines.attr("class","townLines nonActiveLine")
 			.attr("d",function(d) { d.line = this; return line(d.values); })
-			.style('stroke-width', function(d){if(d.town === "Ethiopia"){return '2px'}else{return lineWidth}})
+			.style('stroke-width', function(d){if(d.town === "Ethiopia"){return '3px'}else{return lineWidth}})
 			.style('stroke', function(d){if(d.town === "Ethiopia"){return 'green'}else{return lineColor}})
 			.attr('opacity', function(d){if(d.town === "Ethiopia"){return '1'}else{return '0'}})
 			.attr("clip-path", 'url(#lineclip)');
@@ -687,10 +687,10 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 			if(e.town === d.town){
 				if(e.active){//make inactive and make the town line disappear
 					//update town list
-					var tempList = initializeTownList(tempTown, 0, 0)
+					var tempList = initializeTownList(tempTown, 0, 1)
 					masterTownList = updateTownList(masterTownList, tempList)
 					//make line transparent
-					d3.selectAll('.townLines').filter(function(e) {return e.town===d.town}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0}).classed('activeLine', false).classed('nonActiveLine', true)
+					d3.selectAll('.townLines').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0}).classed('activeLine', false).classed('nonActiveLine', true)
 					//make town dot normal
 					d3.selectAll('.townDots').filter(function(e) {return e.town===d.town}).attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px').classed('activeDot', false).classed('nonActiveDot', true);
 				} else {//make the town active and show line
@@ -698,8 +698,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 					var tempList = initializeTownList(tempTown, 1, 1)
 					masterTownList = updateTownList(masterTownList, tempList)
 					//highlight line
-					d3.selectAll('.townLines').filter(function(e) {return e.town===d.town}).style({'stroke':lineColor,'stroke-width':lineWidth,'opacity':1}).classed('activeLine', true).classed('nonActiveLine', false);
-
+					d3.selectAll('.townLines').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':lineColor,'stroke-width':lineWidth,'opacity':1}).classed('activeLine', true).classed('nonActiveLine', false);
 					//highlight town dot
 					d3.selectAll('.townDots').filter(function(e){return e.town === d.town}).attr({r: townDotRadius * 2, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '3px').classed('activeDot', true).classed('nonActiveDot', false).moveToFront()
 				}
@@ -725,12 +724,13 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		var tempData = masterTownList.filter(function(e){return e.town === d.town}) //the data that we are intereste in
 		if(tempData[0].active){//is the moused over dot active?
 			//make the line red
-			d3.selectAll('.townLines').filter(function(e) {return e.town===d.town}).style({'stroke':'red'}).moveToFront();
+			d3.selectAll('.townLines').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':'red'}).moveToFront();
+			d3.selectAll('.townLines').filter(function(f){return f.region === "Ethiopia"}).moveToFront()
 			//dim the rest of the town dots
 			d3.selectAll('.townDots').filter(function(e){return e.town != d.town}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
 		} else {
 			//make the line red and visible
-			d3.selectAll('.townLines').filter(function(e) {return e.town===d.town}).style({'stroke':'red','stroke-width':lineWidth,'opacity':1}).moveToFront();
+			d3.selectAll('.townLines').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':'red','stroke-width':lineWidth,'opacity':1}).moveToFront();
 			//make the town bigger and the other less visible
 			d3.selectAll('.townDots').filter(function(e){return e.town === d.town}).attr({r: townDotRadius * 1.5, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '2px').moveToFront()
 			d3.selectAll('.townDots').filter(function(e){return e.town != d.town}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
@@ -743,39 +743,106 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate}), function(g){return g.price}),2)
 		d3.selectAll('.histText').text(product + ", Avg. Price: "+ meanPrice + " birr"+', Tot obs: ' + obs)
 		d3.selectAll('.histDots').filter(function(e) {return e.region===d.region}).style('fill', 'silver').attr({r: histDotRadius})
-
-		//region map
-		var regionName = d.region.replace(' ','')
-		d3.selectAll('.boundary-hover#'+regionName).classed('region-boundary',true).classed('boundary-hover-show',false)
-
 		townTip.hide(d)
 
-		//the rest
-		var tempTown = [d.town];
-		var tempData = masterTownList.filter(function(e){return e.town === d.town}) //the data that we are intereste in
-		if(tempData[0].active){
-			//line goes back to normal styling
-			d3.selectAll('.activeLine').filter(function(e) {return e.town===d.town}).style({'stroke':lineColor})
-			//non-active dots go back to normal, active dots go back to highlighted
-			d3.selectAll('.nonActiveDot').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px');
+
+		if(masterRegionList.filter(function(e){return e.active}).length > 0){//is there a selected state
+			var activeRegion = masterRegionList.filter(function(e){return e.active})[0].town.replace(' ','')
 			d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront();
+			d3.selectAll('.nonActiveDot').attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
+			//Active lines go back to normal styling and non-active disappear
+			d3.selectAll('.activeLine').filter(function(f) {return f.town===d.town && f.town != "Ethiopia"}).style({'stroke':lineColor})
+			d3.selectAll('.nonActiveLine').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0})
+			if(masterRegionList.filter(function(f){return f.town === d.region})[0].active){//is the moused town in an active state?
+				var regionName = d.region.replace(' ','')
+				d3.selectAll('.boundary-hover#'+regionName).filter(function(e) { return e}).classed('region-boundary',false).classed('boundary-hover-show',true).moveToFront()
+			} else {
+				//region map
+				var regionName = d.region.replace(' ','')
+				d3.selectAll('.boundary-hover#'+regionName).classed('region-boundary',true).classed('boundary-hover-show',false)
+				d3.selectAll('.boundary-hover#'+activeRegion).filter(function(e) { return e}).classed('region-boundary',false).classed('boundary-hover-show',true).moveToFront()
+			}
 		} else {
-			//line disappear
-			d3.selectAll('.nonActiveLine').filter(function(e) {return e.town===d.town}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0})
-			//non-active dots go back to normal, active dots go back to highlighted
-			d3.selectAll('.nonActiveDot').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px');
-			d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront()
+			//the rest
+			var tempTown = [d.town];
+			var tempData = masterTownList.filter(function(e){return e.town === d.town}) //the data that we are intereste in
+
+			//region map
+			var regionName = d.region.replace(' ','')
+			d3.selectAll('.boundary-hover#'+regionName).classed('region-boundary',true).classed('boundary-hover-show',false)
+
+			if(tempData[0].active){
+				//line goes back to normal styling
+				d3.selectAll('.activeLine').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':lineColor})
+				//non-active dots go back to normal, active dots go back to highlighted
+				d3.selectAll('.nonActiveDot').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px');
+				d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront();
+			} else {
+				//line disappear
+				d3.selectAll('.nonActiveLine').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0})
+				//non-active dots go back to normal, active dots go back to highlighted
+				d3.selectAll('.nonActiveDot').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px');
+				d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront()
+			}
 		}
 	}
 
 	//INTERACTIONS WITH THE STATE MAP
+	//make a list of active and inactive region markers using the town functions for use in the onClick function
+	var tempRegions = uniq_fast(townPriceData.map(function(e){return e.region}));
+	var masterRegionList = initializeTownList(tempRegions, 0, 1);
+
+
 	function onClickRegion(d){
-		//make all the towns in the state active and the rest inactive
-		//allTowns = uniq_fast(townPriceData.map(function(d){return d.town}));
-		//var tempTown = uniq_fast(townPriceData.filter(function(e){return d.properties.regionName === e.region}).map(function(f){return f.town}))
-		//masterTownList = 
-		var tempList = initializeTownList(tempTown, 1, 1)
-		masterTownList = updateTownList(masterTownList, tempList)
+		//identify towns in the region
+		var regionTowns = uniq_fast(townPriceData.filter(function(e){return e.region === d.properties.regionName}).map(function(f){return f.town}))
+
+		//resetting the lines and town dots that are not from the region
+		d3.selectAll('.townLines').filter(function(f){return f.region != d.properties.regionName && f.region != "Ethiopia"}).style({'stroke':lineColor,'stroke-width':lineWidth,'opacity':0}).classed('activeLine', false).classed('nonActiveLine', true); //hide all the lines
+		d3.selectAll('.townDots').filter(function(f) {return f.region != d.properties.regionName}).attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px').classed('activeDot', false).classed('nonActiveDot', true);
+		d3.selectAll('.boundary-hover').filter(function(e) { return e}).classed('region-boundary',true).classed('boundary-hover-show',false).classed('notSelected', true)
+		masterRegionList.forEach(function(e){
+			if(e.town === d.properties.regionName){//list initializes the key as town instead of region so use town to match
+				d3.selectAll('.townLines').filter(function(f){return f.region === "Ethiopia"}).moveToFront()
+				if(e.active){
+					//reset the active regions list to none
+					masterRegionList = initializeTownList(tempRegions, 0, 1);
+					//reset and update the master townlist
+					masterTownList = initializeTownList(allTowns, 0, 1) //resets
+					var regionTownList = initializeTownList(regionTowns, 0, 1)
+					masterTownList = updateTownList(masterTownList, regionTownList)
+					//updating the lines
+					d3.selectAll('.townLines').filter(function(f){return f.region === d.properties.regionName}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0}).classed('activeLine', false).classed('nonActiveLine', true)
+					//updating the dots
+					d3.selectAll('.townDots').filter(function(f) {return f.region === d.properties.regionName}).attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px').classed('activeDot', false).classed('nonActiveDot', true);
+
+					//updating the region boundary
+					d3.selectAll('.boundary-hover').filter(function(e) { return e}).classed('region-boundary',true).classed('boundary-hover-show',false)
+
+				} else {
+					//reset and update the region list to activate current region only
+					masterRegionList = initializeTownList(tempRegions, 0, 1);
+					var currRegion = initializeTownList([e.town], 1, 1)
+					masterRegionList = updateTownList(masterRegionList, currRegion)
+					
+					//reset and update the master townlist
+					masterTownList = initializeTownList(allTowns, 0, 1)//resets the master townlist
+					var regionTownList = initializeTownList(regionTowns, 1, 1)//sets regional towns to active
+					masterTownList = updateTownList(masterTownList, regionTownList)//updates the list
+					
+					//updating the lines
+					d3.selectAll('.townLines').filter(function(f){return f.region === d.properties.regionName}).style({'stroke':lineColor,'stroke-width':lineWidth,'opacity':1}).classed('activeLine', true).classed('nonActiveLine', false)
+					//updating the dots
+					d3.selectAll('.townDots').filter(function(f) {return f.region === d.properties.regionName}).attr({r: townDotRadius * 2, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '3px').classed('activeDot', true).classed('nonActiveDot', false).moveToFront();
+					d3.selectAll('.townDots').filter(function(f){return f.region != d.properties.regionName}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
+					//updating the region boundary
+					var regionName = d.properties.regionName.replace(' ','')
+					d3.selectAll('.boundary-hover#'+regionName).filter(function(e) { return e}).classed('region-boundary',false).classed('boundary-hover-show',true).moveToFront()
+
+
+				}
+			}
+		})
 	}
 
 	function mouseoverRegion(d){
@@ -784,10 +851,14 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.region === d.properties.regionName}), function(g){return g.price}),2)
 		d3.selectAll('.histText').text(d.properties.regionName+ ", Avg. Price: "+meanPrice+ " birr," +'  obs.: ' + obs)
 		d3.selectAll('.histDots').filter(function(e) {return e.region === d.properties.regionName}).style('fill', 'red').attr({r: histDotRadius*1.5}).moveToFront()
+		
 		//line chart
-		d3.selectAll('.townLines').filter(function(e) {return e.region === d.properties.regionName}).style('stroke','red').style('stroke-width','1.5px').moveToFront();
+		d3.selectAll('.nonActiveLine').filter(function(e) {return e.region === d.properties.regionName && e.region != "Ethiopia"}).style({'stroke':lineColor,'stroke-width':lineWidth,'opacity':1}).moveToFront();
+		d3.selectAll('.townLines').filter(function(f){return f.region === "Ethiopia"}).moveToFront()
+		//
+
 		//town map
-		d3.selectAll('.townDots').filter(function(e){return e.region === d.properties.regionName}).attr({r: townDotRadius * 1.5, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '2px').moveToFront()
+		d3.selectAll('.nonActiveDot').filter(function(e){return e.region === d.properties.regionName}).attr({r: townDotRadius * 1.5, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '2px').moveToFront()
 		d3.selectAll('.townDots').filter(function(e){return e.region != d.properties.regionName}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
 
 		//region map
@@ -803,15 +874,47 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate}), function(g){return g.price}),2)
 		d3.selectAll('.histText').text(product + ", Avg. Price: "+ meanPrice + " birr"+', Tot obs: ' + obs)
 		d3.selectAll('.histDots').style('fill', 'silver').attr({r: histDotRadius})
+
 		//line
-		d3.selectAll('.townLines').style('stroke','rgb(150,150,150)').style('stroke-width','1px');
-		//town
-		d3.selectAll('.townDots').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px');
-		//region map
-		var regionName = d.properties.regionName.replace(' ','')
-		d3.selectAll('.boundary-hover#'+regionName).classed('region-boundary',true).classed('boundary-hover-show',false)
+		d3.selectAll('.nonActiveLine').filter(function(e){return e.region === d.properties.regionName}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0});
+
+		if(masterRegionList.filter(function(e){return e.active}).length > 0){
+			var activeRegion = masterRegionList.filter(function(e){return e.active})[0].town.replace(' ','')
+			//dot
+			d3.selectAll('.nonActiveDot').attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
+			d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront();
+			if(!masterRegionList.filter(function(e){return e.town === d.properties.regionName})[0].active){//is the moused state active?
+				//region map
+				var regionName = d.properties.regionName.replace(' ','')
+				d3.selectAll('.boundary-hover#'+regionName).classed('region-boundary',true).classed('boundary-hover-show',false)
+				d3.selectAll('.boundary-hover#'+activeRegion).classed('region-boundary',false).classed('boundary-hover-show',true).moveToFront()
+			}
+		} else {
+			//region map
+			var regionName = d.properties.regionName.replace(' ','')
+			d3.selectAll('.boundary-hover#'+regionName).classed('region-boundary',true).classed('boundary-hover-show',false)
+
+			if(masterTownList.filter(function(e){return e.active}).length > 0){//is there an active town?
+
+				//non-active dots go back to normal, active dots go back to highlighted
+				d3.selectAll('.nonActiveDot').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px');
+				d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront();
+
+				//line goes back to normal styling
+				d3.selectAll('.activeLine').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':lineColor})
+			} else {
+				console.log("no")
+				//line disappear
+				d3.selectAll('.nonActiveLine').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0})
+				//non-active dots go back to normal, active dots go back to highlighted
+				d3.selectAll('.nonActiveDot').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px');
+				//d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront()
+			}
+
+		}
 		regionTip.hide(d)
 	}
+
 	//DEFINING THE MOUSEOVER FUNCTIONS FOR LINE
 	function mouseoverLine(d) {
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.town === d.town}), function(g){return g.price}),2)
