--- a/Ethiopia/onClickEthiopia.html
+++ b/Ethiopia/onClickEthiopia.html
@@ -749,7 +749,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		if(masterRegionList.filter(function(e){return e.active}).length > 0){//is there a selected state
 			var activeRegion = masterRegionList.filter(function(e){return e.active})[0].town.replace(' ','')
 			d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront();
-			d3.selectAll('.nonActiveDot').attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
+			d3.selectAll('.nonActiveDot').attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity}).style('stroke-width', '0.5px')
 			//Active lines go back to normal styling and non-active disappear
 			d3.selectAll('.activeLine').filter(function(f) {return f.town===d.town && f.town != "Ethiopia"}).style({'stroke':lineColor})
 			d3.selectAll('.nonActiveLine').filter(function(e) {return e.town===d.town && e.town != "Ethiopia"}).style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0})
@@ -859,7 +859,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 
 		//town map
 		d3.selectAll('.nonActiveDot').filter(function(e){return e.region === d.properties.regionName}).attr({r: townDotRadius * 1.5, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '2px').moveToFront()
-		d3.selectAll('.townDots').filter(function(e){return e.region != d.properties.regionName}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
+		d3.selectAll('.townDots').filter(function(e){return e.region != d.properties.regionName}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity}).style('stroke-width', '0.5px')
 
 		//region map
 		var regionName = d.properties.regionName.replace(' ','')
@@ -881,7 +881,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		if(masterRegionList.filter(function(e){return e.active}).length > 0){
 			var activeRegion = masterRegionList.filter(function(e){return e.active})[0].town.replace(' ','')
 			//dot
-			d3.selectAll('.nonActiveDot').attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
+			d3.selectAll('.nonActiveDot').attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity}).style('stroke-width', '0.5px')
 			d3.selectAll('.activeDot').attr({r: townDotRadius * 2, opacity: 1, stroke: "green"}).style('stroke-width', '3px').moveToFront();
 			if(!masterRegionList.filter(function(e){return e.town === d.properties.regionName})[0].active){//is the moused state active?
 				//region map
@@ -917,6 +917,8 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 
 	//DEFINING THE MOUSEOVER FUNCTIONS FOR LINE
 	function mouseoverLine(d) {
+		console.log(d)
+		//histogram
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.town === d.town}), function(g){return g.price}),2)
 		d3.selectAll('.histText').text(d.town + " Price on "+monthYear(d.date)+": " + d.price + " birr" + ", Town Avg.: " +meanPrice+ " birr")
 		d3.selectAll('.histDots').filter(function(t){return t.town === d.town && t.date === d.date}).style('fill', 'red').attr({r: histDotRadius*2}).moveToFront()
@@ -934,6 +936,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		//d3.selectAll('.boundary-hover#'+stateName).classed('boundary-hover-hide',false).classed('boundary-hover-show',true)		
 		tip.show(d);
 	}
+
 	function mouseoutLine(d) {
 		//Histogram
 		var obs = d3.selectAll('.histDots').size()
