--- a/Ethiopia/onClickEthiopia.html
+++ b/Ethiopia/onClickEthiopia.html
@@ -50,7 +50,7 @@
 					<div id="mapContainer"></div>
 				</div>
 				<div id='textDiv'>
-					<p>Ethiopia is administratively divided into regions and zones. The data used for this dashboard is collected monthly through surveys of shops in different towns from each zone.</p>
+					<p>Ethiopia is administratively divided into regions and zones. The data used for this dashboard is collected through monthly surveys of shops in different towns from each zone.</p>
 					<p>The <strong>maps</strong> shows the average of all the price observations across the selected time-period for towns and regions. The <strong>line chart</strong> represents the monthly price for towns during the selected time period. The <strong>histogram</strong> shows the spread of the observed prices from each town</p>
 					<p>Hovering over a zone or region would show the data points from that state in the histogram and the line chart. The same is true for the line chart.</p>
 				</div>
