--- a/Ethiopia/onClickEthiopia.html
+++ b/Ethiopia/onClickEthiopia.html
@@ -31,13 +31,13 @@
 		<div class="tab-pane active" id="prices">
 			<div id="selectorDiv">
 				<select id="productSelectPrice">
-						<option selected value="Barley">Barley</option>
-						<option value="Beer">Beer</option>
-						<option value="Cement">Cement</option>
-						<option value="Maize">Maize</option>
-						<option value="Rice">Rice</option>
-						<option value="Teff">Teff</option>
-						<option value="Wheat">Wheat</option>
+						<option selected value="Barley">Barley (1kg)</option>
+						<option value="Beer">Beer (330ml)</option>
+						<option value="Cement">Cement (50kg)</option>
+						<option value="Maize">Maize (1kg)</option>
+						<option value="Rice">Rice (1kg)</option>
+						<option value="Teff">Teff (1kg)</option>
+						<option value="Wheat">Wheat (1kg)</option>
 				</select>
 				<div id="sliderContainer">
 					<div id="sliderAxis"></div>
@@ -715,15 +715,19 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		townLines = townLines.data(lineData);
 		townLines.exit().remove();
 		townLines.enter().append('path');
-		townLines.attr("class", function(d){if(d.town === "Ethiopia"){return "natLine"} else{return "townLines nonActiveLine"}})
+		townLines.attr("class", function(d){if(d.region === "Ethiopia"){return "natLine"} else{return "townLines nonActiveLine"}})
 			.attr("d",function(d) { d.line = this; return line(d.values); })
 			.attr("clip-path", 'url(#lineclip)');
 
+		d3.selectAll('.natLine').style('stroke', 'green')//forcing it to be green to fix the hidden bug
+
+
 		label.attr("transform", "translate(" + (liWidth-60) + "," + yScale(endofLine) + ")")
+			.attr('class', 'label')
 			.attr("text-anchor", "start")
 			.style("fill", "black")
 			.style('alignment-baseline', 'central')
-			.style('font-size','12px')
+
 
 		voronoiGroup = voronoiGroup.data(voronoi(d3.nest()
 			.key(function(d) { return xScale(d.date) + "," + yScale(d.price); })
@@ -809,13 +813,13 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 			//make the active line red
 			d3.selectAll('.townLines').filter(function(e) {return e.town===d.town}).style({'stroke':'red'}).moveToFront();
 			//dim the rest of the town dots
-			d3.selectAll('.townDots').filter(function(e){return e.town != d.town}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
+			d3.selectAll('.townDots').filter(function(e){return e.town != d.town}).transition().duration(300).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
 		} else {//the town is not active..
 			//make the line red and visible by temporarily falsifying non-active class
 			d3.selectAll('.townLines').filter(function(e) {return e.town===d.town}).style({'stroke':'red'}).classed('nonActiveLine', false).moveToFront();
 			//make the town bigger and the other less visible
 			d3.selectAll('.townDots').filter(function(e){return e.town === d.town}).attr({r: townDotRadius * 1.5, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '2px').moveToFront()
-			d3.selectAll('.townDots').filter(function(e){return e.town != d.town}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
+			d3.selectAll('.townDots').filter(function(e){return e.town != d.town}).transition().duration(300).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
 		}
 		d3.selectAll(".natLine").moveToFront()
 	}
@@ -896,7 +900,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		var regionTowns = uniq_fast(townPriceData.filter(function(e){return e.region === d.properties.regionName && e.item === product && e.date >= startDate && e.date <= endDate}).map(function(f){return f.town}))
 
 		//resetting the lines and town dots that are not from the region
-		d3.selectAll('.townLines').filter(function(f){return f.region != d.properties.regionName}).classed('nonActiveLine', true); //hide all the lines .style({'stroke':lineColor,'stroke-width':lineWidth,'opacity':0})
+		d3.selectAll('.townLines').filter(function(f){return f.region != d.properties.regionName}).classed('nonActiveLine', true); //hide all the lines
 		d3.selectAll('.townDots').filter(function(f) {return f.region != d.properties.regionName}).attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px').classed('activeDot', false).classed('nonActiveDot', true);
 		d3.selectAll('.boundary-hover').filter(function(e) { return e}).classed('region-boundary',true).classed('boundary-hover-show',false)
 		masterRegionList.forEach(function(e){
@@ -909,7 +913,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 					var regionTownList = initializeTownList(regionTowns, 0, 1)
 					masterTownList = updateTownList(masterTownList, regionTownList)
 					//updating the lines
-					d3.selectAll('.townLines').filter(function(f){return f.region === d.properties.regionName}).classed('nonActiveLine', true)//.style({'stroke':lineColor,'stroke-width': lineWidth, 'opacity':0})
+					d3.selectAll('.townLines').filter(function(f){return f.region === d.properties.regionName}).classed('nonActiveLine', true)
 					//updating the dots
 					d3.selectAll('.townDots').filter(function(f) {return f.region === d.properties.regionName}).attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px').classed('activeDot', false).classed('nonActiveDot', true);
 
@@ -928,7 +932,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 					masterTownList = updateTownList(masterTownList, regionTownList)//updates the list
 					
 					//updating the lines
-					d3.selectAll('.townLines').filter(function(f){return f.region === d.properties.regionName}).classed('nonActiveLine', false)//.style({'stroke':lineColor,'stroke-width':lineWidth,'opacity':1})
+					d3.selectAll('.townLines').filter(function(f){return f.region === d.properties.regionName}).classed('nonActiveLine', false)
 					//updating the dots
 					d3.selectAll('.townDots').filter(function(f) {return f.region === d.properties.regionName}).attr({r: townDotRadius * 2, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '3px').classed('activeDot', true).classed('nonActiveDot', false).moveToFront();
 					d3.selectAll('.townDots').filter(function(f){return f.region != d.properties.regionName}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity})
@@ -942,7 +946,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	}
 
 	function mouseoverRegion(d){
-		var regionTowns = uniq_fast(townPriceData.filter(function(e){return e.region === d.properties.regionName && e.item === product && e.date >= startDate && e.date <= endDate}).map(function(f){return f.town}))
+		var regionTowns1 = uniq_fast(townPriceData.filter(function(e){return e.region === d.properties.regionName && e.item === product && e.date >= startDate && e.date <= endDate}).map(function(f){return f.town}))
 
 		//histogram
 		var obs = d3.selectAll('.histDots').filter(function(e){return e.region === d.properties.regionName}).size()
@@ -951,21 +955,21 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		d3.selectAll('.histDots').filter(function(e) {return e.region === d.properties.regionName}).style('fill', 'red').attr({r: histDotRadius*1.5}).moveToFront()
 
 		//if lines are not active already then they are temporarily made active (will be changed back in mouseout if not an active state)
-		regionTowns.forEach(function(g){
+		regionTowns1.forEach(function(g){
+			//console.log(masterTownList.filter(function(e){return e.town===g}), g)
 			if(!masterTownList.filter(function(t){return t.town === g})[0].active){//if the town is not active then make line active temporarily
 				d3.selectAll('.townLines').filter(function(e) {return e.region === d.properties.regionName && e.town === g}).style({'stroke':lineColor}).classed('nonActiveLine', false).moveToFront();
 			}
 		})
 
-		
 		//town map
 		d3.selectAll('.nonActiveDot').filter(function(e){return e.region === d.properties.regionName}).attr({r: townDotRadius * 1.5, opacity: 1, stroke: "LightBlue"}).style('stroke-width', '2px').moveToFront()
-		d3.selectAll('.townDots').filter(function(e){return e.region != d.properties.regionName}).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity}).style('stroke-width', '0.5px')
+		d3.selectAll('.townDots').filter(function(e){return e.region != d.properties.regionName}).transition().duration(500).attr({r: townDotRadius * 0.5, opacity: 0.5*townDotOpacity}).style('stroke-width', '0.5px')
 
 		//region map
 		var regionName = d.properties.regionName.replace(' ','')
 
-		d3.selectAll('.boundary-hover#'+regionName).filter(function(e) { return e}).classed('region-boundary',false).classed('boundary-hover-show',true).moveToFront()
+		d3.selectAll('.boundary-hover#'+regionName).classed('region-boundary',false).classed('boundary-hover-show',true).moveToFront()
 
 		d3.selectAll(".natLine").moveToFront()
 		regionTip.show(d)
@@ -973,7 +977,8 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 
 
 	function mouseoutRegion(d){
-		var regionTowns = uniq_fast(townPriceData.filter(function(e){return e.region === d.properties.regionName && e.item === product && e.date >= startDate && e.date <= endDate}).map(function(f){return f.town}))
+		var regionTowns2 = uniq_fast(townPriceData.filter(function(e){return e.region === d.properties.regionName && e.item === product && e.date >= startDate && e.date <= endDate}).map(function(f){return f.town}))
+
 
 		//histogram
 		var obs = d3.selectAll('.histDots').size()
@@ -981,7 +986,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		d3.selectAll('.histText').text(product + ", Avg. Price: "+ meanPrice + " birr"+', Tot obs: ' + obs)
 		d3.selectAll('.histDots').style('fill', 'silver').attr({r: histDotRadius})
 
-		regionTowns.forEach(function(g){//make all non-active town lines transparent
+		regionTowns2.forEach(function(g){//make all non-active town lines transparent
 			if(!masterTownList.filter(function(t){return t.town === g})[0].active){//if the town is not active then make line active temporarily
 				d3.selectAll('.townLines').filter(function(e) {return e.region === d.properties.regionName && e.town === g}).style({'stroke':lineColor}).classed('nonActiveLine', true)
 			}
@@ -1060,10 +1065,10 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 
   	//RESELECTING THE PRODUCT AND REDRAWING THE MAP BASED ON CHANGES
 	d3.select('#productSelectPrice').on('change.map', function(d) {
-        var product = d3.select(this).property('value');
+        product = d3.select(this).property('value');
 		//var dates = $('#slider').slider('values');
-		var startDate = d3.min(townPriceData, function(d){return d.date});
-   		var endDate = d3.max(townPriceData, function(d){return d.date});
+		startDate = d3.min(townPriceData, function(d){return d.date});
+   		endDate = d3.max(townPriceData, function(d){return d.date});
         redrawMap(product, startDate, endDate);
         //resetting the lines and town dots that are not from the region
     });
@@ -1090,7 +1095,7 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		var tempRegions = uniq_fast(townPriceData.filter(function(e){return e.item === product && e.date >= startDate && e.date <= endDate}).map(function(e){return e.region}));
 		masterRegionList = initializeTownList(tempRegions, 0, 1);
 
-	  	var allTowns = uniq_fast(townPriceData.filter(function(e){return e.item === product && e.date >= startDate && e.date <= endDate}).map(function(d){return d.town}));
+	  	allTowns = uniq_fast(townPriceData.filter(function(e){return e.item === product && e.date >= startDate && e.date <= endDate}).map(function(d){return d.town}));
   		masterTownList = initializeTownList(allTowns, 0, 1);
 
   		d3.selectAll('.townDots').attr({r: townDotRadius, opacity: townDotOpacity, stroke:'black'}).style('stroke-width', '0.5px').classed('activeDot', false).classed('nonActiveDot', true);
@@ -1123,10 +1128,10 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	}
 
 	d3.select('#productSelectPrice').on('change.line', function(d) {
-        var product = d3.select(this).property('value');
+        product = d3.select(this).property('value');
 		//var dates = $('#slider').slider('values');
-		var startDate = d3.min(townPriceData, function(d){return d.date});
-   		var endDate = d3.max(townPriceData, function(d){return d.date});
+		startDate = d3.min(townPriceData, function(d){return d.date});
+   		endDate = d3.max(townPriceData, function(d){return d.date});
 	   	var drawVoronoi = true;
 
 		//updating the lines
@@ -1163,8 +1168,8 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 
 		masterRegionList = initializeTownList(tempRegions, 0, 1);
 
-	  	var allTowns = uniq_fast(townPriceData.filter(function(e){return e.item === product && e.date >= startDate && e.date <= endDate}).map(function(d){return d.town}));
-	  	console.log(allTowns.length)
+	  	allTowns = uniq_fast(townPriceData.filter(function(e){return e.item === product && e.date >= startDate && e.date <= endDate}).map(function(d){return d.town}));
+
   		masterTownList = initializeTownList(allTowns, 0, 1);
   		//reset all the townlines
   		d3.selectAll('.townLines').classed('nonActiveLine', true)
@@ -1185,7 +1190,6 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	   		/*var townLines = lineChart.append("g")
 				.selectAll("path")*/
 	  		drawLine(lineData, lineColor, lineWidth)
-	  		
 	  	}
 	}
 }
